--- a/assets/css/post.sass
+++ b/assets/css/post.sass
@@ -100,9 +100,5 @@ html
 .left-align
   list-style-type: none !important
 
-.related-posts
-  margin-top: 10px !important
-  margin-bottom: 200px !important
-
 .table-of-contents a.active
   border-left: 2px solid $cg-red
