--- a/assets/css/thi_scss.scss
+++ b/assets/css/thi_scss.scss
@@ -61,6 +61,10 @@ blockquote{
 	//padding: 0 0.75rem;
 }
 
+.thi-post{
+  line-height: 180%;
+}
+
 body {
   counter-reset: h2counter;
 }
